--- a/week-3&4/document.tex
+++ b/week-3&4/document.tex
@@ -1,28 +1,57 @@
 \documentclass{article}
-\title{My first laTeX Document}
-\author{venkatesh}
+\author{rakesh}
 \date{\today}
+\title{Resume}
+\usepackage{xcolor}
+\usepackage{graphicx}
+\usepackage{graphics}
 \begin{document}
 	\maketitle
-	\section{introduction}
-	This is my first latex document
-	\subsection{features}
-	\begin{itemize}
-		\item Easy to formating
-		\item support for mathematical Equations
-		\item this project contains a file
-	\end{itemize}
+	\textbf{Hello}  \space \\
+	\textit{Hello }
+	\texttt{Hello}
+	\textsc{Hello}
+	\underline{Hello}
+	\tiny{ Hello }
+	\huge{	how are you ?}
+	\scriptsize{Rakesh}
+	\footnotesize{ABCD}
+	\large:{ Large text.} \\
+	\Large: {Larger than large.} \\
+	\LARGE:{ Even larger.}
+	
+	\huge: {Huge text.}
+	\Huge: {Largest.}
+	
+	\textcolor{blue}{\huge {this is blue color}} \\
+	\textcolor{red}{this color is red} \\
+	\textcolor{green}{this is green color} \\
+	\section{Enumerate}
+		\begin{enumerate}
+			\item  Apple
+			\item Mango
+			\item Orange
+		\end{enumerate}
+	\subsection{Lists}
+		\begin{itemize}
+			\item A
+			\item B
+			\item C
+		\end{itemize}
+	\section{Discription of words}
+	\begin{description}
+		\item[LaTeX] A document preparation system and document
+		markup language.
+		\item[TeX] A typesetting system designed and mostly written
+		by Donald Knuth.
+		\vspace{1cm}
+		\item[CTAN] \hspace{1cm} The Comprehensive TeX Archive Network. 
+	\end{description}
 
-	\begin{enumerate}
-	\item Easy to formating
-	\item support for mathematical Equations
-	\item this project contains a file
-\end{enumerate}
-
-\begin{description}
-	\item Easy to formating
-	\item support for mathematical Equations
-	\item this project contains a file
-\end{description}
-
+	$x \vert y$ \\
+	$a \vert b$
+	\section{Mathematics}
+	\begin{math}
+		sin^2(30)
+		\end{math}
 \end{document}
